--- a/package.json
+++ b/package.json
@@ -1,34 +1,54 @@
 {
-  "name": "ada-html",
-  "description": "A Modern landing page built with Tailwind CSS, Tailus Themer and Vite",
-  "private": false,
-  "version": "0.1.1",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.3"
-  },
-  "main": "main.js",
-  "keywords": [
-    "tailwindcss",
-    "tailus",
-    "boilerplate",
-    "html",
-    "vite",
-    "tailus-themer"
-  ],
-  "author": "Méschac irung",
-  "license": "ISC",
+  "name": "0xl10n.org",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@tailus/themer": "^0.0.5",
-    "swiper": "^11.0.6"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "format": "prettier --write"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@craco/types": "^7.1.0",
+    "@types/node": "^16.18.96",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
+    "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3"
   }
 }
