--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "sourceMap": true,
-    "types": ["vitest/globals"],
+    "types": ["node", "jest", "@testing-library/jest-dom"],
     "incremental": true
   },
   "include": [
