--- a/package.json
+++ b/package.json
@@ -1,58 +1,20 @@
 {
   "name": "0xl10n.org",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@tailus/themer": "^0.0.5",
-
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "format": "prettier --write"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "@craco/types": "^7.1.0",
-    "@jest/globals": "29.7.0",
-    "@types/node": "^16.18.96",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.10.2",
-    "eslint-config-react-app": "^7.0.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "jest-transform-stub": "^2.0.0",
-    "postcss": "^8.4.38",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3",
-    "ts-jest": "^29.1.2"
+    "turbo": "latest"
+  },
+  "packageManager": "pnpm@9.1.0",
+  "engines": {
+    "node": ">=20"
   }
 }
