--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "sourceMap": true,
-    "types": ["node", "jest", "@testing-library/jest-dom"],
-    "incremental": true
-  },
-  "include": [
-    "src"
-  ]
+  "extends": "@repo/typescript-config/base.json"
 }
