--- a/.gitignore
+++ b/.gitignore
@@ -2,38 +2,33 @@
 .idea/
 
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# testing
+coverage/
+
+# Turbo
+.turbo
+
+# production
+.next/
+out/
+build
+dist
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -46,3 +41,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .env
+*.pem
