--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "@repo/docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -30,11 +30,7 @@
     "typescript": "~5.2.2"
   },
   "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.5%", "not dead", "not op_mini all"],
     "development": [
       "last 3 chrome version",
       "last 3 firefox version",
