--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "craco start",
     "build": "craco build",
+    "postbuild": "react-snap && cp -R ../docs/build build/docs",
     "test": "craco test",
     "lint": "eslint . --max-warnings 0",
     "format": "prettier --write ."
@@ -20,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@repo/docs": "workspace:*"
   },
   "eslintConfig": {
     "root": true,
@@ -55,6 +57,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-snap": "^1.23.0",
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.2"
   }
