--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -60,5 +60,14 @@
     "react-snap": "^1.23.0",
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.2"
+  },
+  "reactSnap": {
+    "source": "build",
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox",
+      "--disable-dev-shm-usage",
+      "--single-process"
+    ]
   }
 }
