--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "0xl10n.org",
   "private": true,
   "scripts": {
-    "build": "turbo build",
+    "build": "turbo run build --cache-dir=.turbo",
+    "test": "turbo run test --cache-dir=.turbo",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
