--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@privy-io/react-auth": "^1.63.0",
     "@tailus/themer": "^0.0.5",
-
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -44,11 +45,11 @@
     "@craco/craco": "^7.1.0",
     "@craco/types": "^7.1.0",
     "@jest/globals": "29.7.0",
+    "@testing-library/jest-dom": "^5.17.0",
     "@types/node": "^16.18.96",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.2",
     "eslint-config-react-app": "^7.0.1",
-    "@testing-library/jest-dom": "^5.17.0",
     "jest-transform-stub": "^2.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
