--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -11,7 +11,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@fontsource/noto-serif": "^5.0.20",
+    "@repo/docs": "workspace:*",
     "@tailus/themer": "^0.0.5",
+    "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-query": "^5.36.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -21,8 +25,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@repo/docs": "workspace:*"
+    "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
     "root": true,
@@ -48,6 +51,7 @@
     "@jest/globals": "29.7.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@types/node": "^16.18.96",
     "autoprefixer": "^10.4.19",
