--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -4,7 +4,8 @@
     "jsx": "react-jsx",
     "sourceMap": true,
     "types": ["node", "jest", "@testing-library/jest-dom"],
-    "incremental": true
+    "incremental": true,
+    "moduleResolution": "bundler"
   },
   "include": [
     "src"
